labs/incident-arena-03-service-networkpolicy-ingress/manifests/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arena-api
  namespace: incident-arena-03-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arena-api
  template:
    metadata:
      labels:
        app: arena-api
        tier: backend
    spec:
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 2
            periodSeconds: 3
          volumeMounts:
            - name: content
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
              readOnly: true
      volumes:
        - name: content
          configMap:
            name: arena-api-content
